Hopefully fixes overflow issues

--- a/css/main.less
+++ b/css/main.less
@@ -72,6 +72,7 @@
  * MY OVERWRITES
  */
 body {
+    overflow-x: hidden;
 	border-top: 7px solid @brand-success;
 	padding-bottom: 50px;
 }
@@ -120,8 +121,8 @@ footer:not(.hide) {
 		background: lighten(@base-section-color, 35%);
 
 		h1,h2,h3,h4,h5,h6,p {
-		color: darken(@base-section-color, 40%);
-		text-shadow: 0px 1px 0px #fff;
+			color: darken(@base-section-color, 40%);
+			text-shadow: 0px 1px 0px #fff;
 		}
 
 		.page-header {
